<resources>
    <string name="app_name">Mateforparktest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="gender">
        <item>Do not specify</item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>

    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <!--Contact Form-->

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Thanks for contacting us! We will reply as soon as possible.</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>

</resources>
