<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ContactActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scrollViewContact"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="37dp"
        android:gravity="center"
        android:text="Contact Us"
        android:textColor="#A9A9A9"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/back"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:layout_gravity="left"

        android:layout_margin="20dp"/>


    <ScrollView
        android:id="@+id/scrollViewContact"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_email"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_email"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="14sp" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_subject"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_subject"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_message"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:height="180dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <Button
                android:id="@+id/post_message"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="1dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>